--- a/gb/24/7/14/n14290767.md
+++ b/gb/24/7/14/n14290767.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【翻墙必看】华为Mate 60 Pro暴跌</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/03/id14206570-670844-600x400.jpg" />
-<h6>华为商标。（Greg Baker/AFP/Getty Images）
-</h6>
+<h6>华为商标。（Greg Baker/AFP/Getty Images）</h6>
 <hr>
 	<p>【大纪元2024年07月15日讯】大纪元每天为读者梳理翻墙必看的文章：</p>
 <p>1.<b><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290977.md#1" target="_blank" rel="noopener noreferrer">华为发债10亿引热议 多款手机近期暴跌</a></b><br />
@@ -38,36 +37,34 @@
 <p>15.<b><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1" target="_blank" rel="noopener noreferrer">中国饮用水价格战开打 农夫山泉0.74元一瓶</a></b><br />
 近日以来，中国饮用水市场硝烟弥漫。农夫山泉超低价格在市场掀起新一轮价格战，部分渠道价格降至约0.74元/瓶，竞争对手娃哈哈、怡宝、康师傅不得不随着降价。</p>
 <p>责任编辑：方晓</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287322.md#1">【翻墙必看】大陆大货车司机上吊的背后</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288360.md#1">【翻墙必看】周恩来47岁女秘书自杀之谜</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289200.md#1">【翻墙必看】大陆国企员工被裁后很快憔悴</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290242.md#1">【翻墙必看】目击者谈川普被“即时袭击”</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/13/n10711496.md#1" target="_blank">共产暴政录：喊错口号导致六千人被杀</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276851.md#1">【杨延昭传奇】杨延昭威震三关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282412.md#1">【菁英论坛】俄间谍创办中共 一大代表逾半退党</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282416.md#1">【秦鹏观察】三大新闻事件背后 藏中共外交密码</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282182.md#1">【军事热点】“亚速营”再现 但被困者是俄军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278998.md#1">分析：台商撤离冲击中国经济 也令中共尴尬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280888.md#1">沈舟：中共海军急缺战列舰 但从未造过</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282080.md#1">《鬼灭之刃 柱训练篇》影评：高强度训练 为大战做热身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281728.md#1">被问赵又廷私下如何叫她 高圆圆回答笑翻全场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281392.md#1">14天旅游只需带一个背包 打包行李8秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/7/14/n14290767.htm">【翻墙必看】华为Mate 60 Pro暴跌</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/14/n14290767.htm">【翻墙必看】华为Mate 60 Pro暴跌</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290767.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
